connect database and write Auth API

--- a/config.env
+++ b/config.env
@@ -1,1 +1,4 @@
 PORT=3000
+DBPASSWORD=vIYhNLm1dmbu9co3
+DBURI=mongodb+srv://giao:<PASSWORD>@cluster0.qiva4vk.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET=288918912ukjduiujhduiiuewjk18
