Verify OTP, Login, Forgot password, Reset password

--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
-PORT=3000
+PORT=3001
 DBPASSWORD=vIYhNLm1dmbu9co3
 DBURI=mongodb+srv://giao:<PASSWORD>@cluster0.qiva4vk.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=288918912ukjduiujhduiiuewjk18
+SGKEY=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
