Setting socket.io

--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
-PORT=3000
+PORT=3001
 DBPASSWORD=vIYhNLm1dmbu9co3
 DBURI=mongodb+srv://giao:<PASSWORD>@cluster0.qiva4vk.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=288918912ukjduiujhduiiuewjk18
-Key1=""
+Key1=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
